tests/functional/lang/parse-fail-eol-1.err.exp
error: undefined variable 'invalid'
       at /pwd/parse-fail-eol-1.nix:2:1:
            1| # foo
            2| invalid
             | ^
            3| # bar
